--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,27 @@
 name: YourName
 permalink: :year/:month/:day/:title
+
+# Your blog's start year and this year, showed in the footer left
+# start is optional
+start: 2017
+now: 2019
  
 # Social links showed in the footer
 # You just need modify the nickname of github and twitter
-# 网站底部的社交信息外链
 link:
   email : yourname@gmail.com
   github : yourname
   twitter : yourname
-  jianshu: http://www.jianshu.com/users/yourname
 
 # Links in the navigation, you can modify both link name and link url
-# 网站顶部的导航链接，支持修改链接名称及链接
 nav:
-   Home: http://yoursite.cn
-   Diary: http://yoursite.cn/diary/
+   Home: "/"
+   Diary: "/diary"
 
    
 markdown: kramdown
 highlighter: rouge
+
+sass:
+  sass_dir: _sass
+  style: compressed
